--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-basic-linkedin-type",
+  "name": "react-firebase-homepage",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
